src/tess/tl/test/fail/test_fail_integer_exact_conditional.tl
#module main

// Exact match required: if-then-else branches CInt vs CShort should fail.

main() {
    a: CInt   := 10
    b: CShort := 5
    if 1 == 1 { a } else { b }
    0
}
